Added setting to only allow reporting in teamchat

--- a/b3/conf/plugin_reportcod4.ini
+++ b/b3/conf/plugin_reportcod4.ini
@@ -29,6 +29,8 @@ max_report_interval: 60
 max_reports_in_interval: 5
 # Maximum number of reporters to show for a given player
 max_reporters_to_show: 5
+
+teamchat_only: true
 # Teamspeak settings
 ts_enable: true
 ts_host: localhost
